fix homepage alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,10 +36,15 @@
   margin-left: 10px;
   margin-top: 10px;
 }
+
 h1 {
   padding-bottom: 20px;
 }
 
-.btn {
+.btn-success, .btn-danger {
   margin-bottom: 30px;
+}
+
+.submitted {
+  font-size: 15px;
 }
